--- a/index.html
+++ b/index.html
@@ -184,16 +184,17 @@
                       <label for="usuario-contraseña">Contraseña:</label>
                      <input type="password" id="usuario-contraseña" required aria-required="true">
                 </div>
-
+                
                 <div class="form-group">
-                    <label for="usuario-rol">Rol:</label>
-                    <select id="usuario-rol" required aria-required="true">
-                        <option value="">Seleccione un rol</option>
-                        <option value="admin">Administrador</option>
-                        <option value="editor">Editor</option>
-                        <option value="visor">Visor</option>
-                    </select>
-                </div>
+             <label for="usuario-rol">Rol:</label>
+            <select id="usuario-rol" required aria-required="true">
+            <option value="">Seleccione un rol</option>
+            <option value="admin">Administrador</option>
+        <option value="empleado">Empleado</option>
+          <option value="gerente">Gerente</option>
+            </select>
+            </div>
+            
                 <div class="form-actions">
                     <button type="button" class="btn btn-submit" id="guardar-usuario">Guardar Usuario</button>
                     <button type="button" class="btn btn-cancel" id="cancelar-usuario">Cancelar</button>
